# ChangeLog for media-sound/synthv1
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*synthv1-0.3.4 (16 Jul 2013)

  16 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -synthv1-0.3.2.ebuild, -synthv1-0.3.2-r1.ebuild, +synthv1-0.3.4.ebuild,
  synthv1-9999.ebuild:
  Removed qt4 fix.
  Version bump.
  Removed old ebuilds.

  07 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-9999.ebuild:
  Make sure configure finds qt.
  Update mime database.

*synthv1-0.3.3 (31 May 2013)

  31 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +synthv1-0.3.3.ebuild:
  Version bump.

  05 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-0.3.2-r1.ebuild, synthv1-9999.ebuild:
  Restrict mirror.

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-9999.ebuild:
  Require jack or lv2 to be built.

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-0.3.2-r1.ebuild, synthv1-9999.ebuild:
  Remove reduntant DOCS variable.
  Require alsa or jackmidi if jack stand-alone client is built.

*synthv1-0.3.2-r1 (04 May 2013)

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +synthv1-0.3.2-r1.ebuild, synthv1-9999.ebuild:
  Use qt4-r2 eclass to respect common variables.

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-0.3.2.ebuild, synthv1-9999.ebuild:
  Removed hard-enabled jack USE flag (fixed upstream).

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-0.3.2.ebuild, synthv1-9999.ebuild:
  Only raw text in HOMEPAGE.
  Remove hard-enabled jackmidi use flag (fixed upstream).

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-0.3.2.ebuild, synthv1-9999.ebuild, metadata.xml:
  Add more useflags.
  Force-enable jack and jackmidi use flags.
  Declare AUTOTOOLS_AUTORECONF before inherit.

  04 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>